--- a/_config.yml
+++ b/_config.yml
@@ -23,19 +23,19 @@ sass:
 # Site Data
 url: # the base hostname & protocol for your site, e.g. http://example.com
 baseurl: # the subpath of your site, e.g. /blog
-title: Simple Texture
-description: "A gem-based responsive simple texture styled Jekyll theme."
+title: EMPIRE
+description: "Sonic Multiplicities"
 keywords: 'jekyll,theme,gem-based,blog'
 author:
   name:
   job_title:
   location:
-  email:
+  email: andrew@grathwohl.me
   social_links:
     - name: facebook
       url:
     - name: github
-      url: https://github.com/yizeng/jekyll-theme-simple-texture
+      url:
     - name: instagram
       url:
     - name: linkedin
@@ -47,8 +47,8 @@ author:
     - name: vk
       url:
 home:
-  section1: <h1>Simple Texutre</h1>
-  section2: <h2>A gem-based responsive simple texture styled Jekyll theme</h2>
+  section1: <h1>EMPIRE</h1>
+  section2: <img src="assets/images/theme/empire.png"> 
   section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/yizeng/jekyll-theme-simple-texture" title="View on GitHub"></a></div>
 blog:
   cc_license: http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License of your choice.
