--- a/_config.yml
+++ b/_config.yml
@@ -32,8 +32,8 @@ author:
   location:
   email: andrew@grathwohl.me
   social_links:
-    - name: facebook
-      url:
+    - name: bandcamp
+      url: https://empire-sm.bandcamp.com/
     - name: github
       url:
     - name: instagram
@@ -49,7 +49,7 @@ author:
 home:
   section1: <h1>EMPIRE</h1>
   section2: <img src="assets/images/theme/empire.png"> 
-  section3: <div class="social-links"><a class="ico-github btn" href="https://github.com/yizeng/jekyll-theme-simple-texture" title="View on GitHub"></a></div>
+  section3: <h2>Sonic Multiplicities</h2>
 blog:
   cc_license: http://creativecommons.org/licenses/by-sa/4.0/ # A link to CC License of your choice.
   cc_license_image: /assets/images/theme/cc-by-sa.png # An image of your CC License. 
