--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ title: EMPIRE
 description: "Sonic Multiplicities"
 keywords: 'music,electroacoustic,experimental,classical,violin,computer,AI,supercollider'
 author:
-  name:
+  name: Andrew Grathwohl
   job_title:
   location: Brooklyn, NY
   email: andrew@grathwohl.me
